--- a/homecooked-rails/test/fixtures/dinners.yml
+++ b/homecooked-rails/test/fixtures/dinners.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  starts_at: 2017-11-14 18:54:01
-  location: MyString
-
-two:
-  starts_at: 2017-11-14 18:54:01
-  location: MyString
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
